tests/NormalTests/paczka1/small_fuzzy/64627613.err
Error in line 7: A983 A324 35,8
Error in line 13: qBDd A909 81,80
